// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with /materials/:id route renders correctly 1`] = `
<div>
  <div>
    Material
  </div>
</div>
`;

exports[`with root route renders correctly 1`] = `
<div>
  <div>
    Materials
  </div>
</div>
`;
